<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#0DA8D7"
        android:text="Cadastrar"
        app:flow_horizontalBias="0.44"
        app:layout_constraintStart_toEndOf="@id/btn_entrar"
        app:layout_constraintTop_toBottomOf="@id/edt_urlImg" />

    <EditText
        android:id="@+id/edt_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/digite_nome"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/edt_senha"
        tools:layout_editor_absoluteX="4dp" />

    <EditText
        android:id="@+id/edt_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:hint="@string/edt_senha"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/edt_login"
        tools:layout_editor_absoluteX="4dp" />

    <EditText
        android:id="@+id/edt_urlImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="Digite a URL da Imagem"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        tools:layout_editor_absoluteX="4dp" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/digite_email"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/edt_nome"
        tools:layout_editor_absoluteX="4dp" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#8A1212"
        android:text="Entrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_urlImg" />

    <EditText
        android:id="@+id/edt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:hint="@string/edt_login"
        android:minHeight="48dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="4dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="216dp"
        android:layout_height="192dp"
        app:layout_constraintBottom_toTopOf="@+id/edt_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>